create 2 spends endpoints add spend and fetch all spends -- missing unit test for handler and router